@@ -7,40 +7,42 @@
 
 Vue.component('lms-groupplayers-dialog', {
     template: `
-<v-dialog v-model="show" width="600" persistent class="lms-dialog">
+<v-dialog v-model="show" v-if="show" width="600" persistent class="lms-dialog">
  <v-card>
   <v-card-title>{{player ? i18n("Edit Group Player") : i18n("Create Group Player")}}</v-card-title>
-  <v-list two-line>
-   <v-list-tile>
-    <v-list-tile-content>
-     <v-text-field clearable autofocus v-if="show" :label="i18n('Name')" v-model="name" class="lms-search"></v-text-field>
-    </v-list-tile-content>
-   </v-list-tile>
-   <v-list-tile>
-    <v-select chips deletable-chips multiple :items="players" :label="i18n('Group members')" v-model="chosenPlayers" item-text="label" item-value="id">
-     <v-list-tile slot="prepend-item" @click="togglePlayers()" v-if="players.length>1">
-      <v-list-tile-action><v-icon>{{selectAllIcon}}</v-icon></v-list-tile-action>
-      <v-list-tile-title>{{i18n('Select All')}}</v-list-tile-title>
-     </v-list-tile>
-     <v-divider slot="prepend-item"></v-divider>
-    </v-select>
-   </v-list-tile>
-   <v-list-tile>
-    <v-list-tile-content @click="options.powerMaster = !options.powerMaster" class="switch-label">
-     <v-list-tile-title>{{i18n('Power on/off all')}}</v-list-tile-title>
-     <v-list-tile-sub-title>{{i18n("Use group player's power settings to control power of all members.")}}</v-list-tile-sub-title>
-    </v-list-tile-content>
-    <v-list-tile-action><v-switch v-model="options.powerMaster"></v-switch></v-list-tile-action>
-   </v-list-tile>
-   <v-divider></v-divider>
-   <v-list-tile>
-    <v-list-tile-content @click="options.powerPlay = !options.powerPlay" class="switch-label">
-     <v-list-tile-title>{{i18n('Power on all upon play')}}</v-list-tile-title>
-     <v-list-tile-sub-title>{{i18n('Power on all group members when playing to group.')}}</v-list-tile-sub-title>
-    </v-list-tile-content>
-    <v-list-tile-action><v-switch v-model="options.powerPlay"></v-switch></v-list-tile-action>
-   </v-list-tile>
-  </v-list>
+  <v-form ref="form" v-model="valid" lazy-validation>
+   <v-list two-line>
+    <v-list-tile>
+     <v-list-tile-content>
+      <v-text-field clearable autofocus :label="i18n('Name')" v-model="name" class="lms-search" :rules="nameRules" required></v-text-field>
+     </v-list-tile-content>
+    </v-list-tile>
+    <v-list-tile>
+     <v-select chips deletable-chips multiple :items="players" :label="i18n('Group members')" v-model="chosenPlayers" item-text="label" item-value="id">
+      <v-list-tile slot="prepend-item" @click="togglePlayers()" v-if="players.length>1">
+       <v-list-tile-action><v-icon>{{selectAllIcon}}</v-icon></v-list-tile-action>
+       <v-list-tile-title>{{i18n('Select All')}}</v-list-tile-title>
+      </v-list-tile>
+      <v-divider slot="prepend-item"></v-divider>
+     </v-select>
+    </v-list-tile>
+    <v-list-tile>
+     <v-list-tile-content @click="options.powerMaster = !options.powerMaster" class="switch-label">
+      <v-list-tile-title>{{i18n('Power on/off all')}}</v-list-tile-title>
+      <v-list-tile-sub-title>{{i18n("Use group player's power settings to control power of all members.")}}</v-list-tile-sub-title>
+     </v-list-tile-content>
+     <v-list-tile-action><v-switch v-model="options.powerMaster"></v-switch></v-list-tile-action>
+    </v-list-tile>
+    <v-divider></v-divider>
+    <v-list-tile>
+     <v-list-tile-content @click="options.powerPlay = !options.powerPlay" class="switch-label">
+      <v-list-tile-title>{{i18n('Power on all upon play')}}</v-list-tile-title>
+      <v-list-tile-sub-title>{{i18n('Power on all group members when playing to group.')}}</v-list-tile-sub-title>
+     </v-list-tile-content>
+     <v-list-tile-action><v-switch v-model="options.powerPlay"></v-switch></v-list-tile-action>
+    </v-list-tile>
+   </v-list>
+  </v-form>
   <div class="dialog-padding"></div>
   <v-card-actions>
    <v-spacer></v-spacer>
@@ -54,9 +56,14 @@ Vue.component('lms-groupplayers-dialog', {
     props: [],
     data() {
         return {
+            valid: false,
             show: false,
             player: undefined,
             name: undefined,
+            nameRules: [
+                v => !!v || i18n('Name is required'),
+                v => (v && v.trim().length > 0) || i18n('Name is required')
+            ],
             options: { powerMaster: true, powerPlay: true },
             players: [],
             chosenPlayers: []
