@@ -90,6 +90,7 @@
 "Failed to delete playlist!":"Playlist löschen fehlgeschlagen!",
 "Failed to determine plugin status.":"Plugin-Status aktualisieren fehlgeschlagen.",
 "Failed to find an album!":"Albumsuche fehlgeschlagen!",
+"Failed to remove '%1'!":"Fehler beim Entfernen von '%1'!",
 "Failed to remove favorite!":"Favorit entfernen fehlgeschlagen!",
 "Failed to retreive information.":"Fehler beim Abrufen der Informationen.",
 "Failed to retrieve listing. (%1)":"Liste abrufen fehlgeschlagen!",
@@ -166,6 +167,7 @@
 "Remote Libraries":"Entfernte Musiksammlungen",
 "Remove":"Entfernen",
 "Remove '%1' from favorites?":"Entferne '%1' aus den Favoriten?",
+"Remove '%1'?":"'%1' entfernen?",
 "Remove all selected items":"Alle ausgewählten Einträge entfernen",
 "Remove all tracks from queue?":"Aktuelle Wiedergabeliste leeren?",
 "Remove from favorites":"Aus Favoriten entfernen",
@@ -323,7 +325,6 @@
 "Audio":"",
 "CD Player":"",
 "Dynamic Playlists":"",
-"Failed to remove '%1'!":"Fehler beim Entfernen von '%1'!",
 "Firmware: %1":"",
 "IP: %1":"",
 "Information":"",
@@ -331,10 +332,13 @@
 "Material Skin v%1":"",
 "Mon":"",
 "Name":"",
+"Name is required":"",
 "OK":"",
 "Plugins":"",
 "Radio":"",
-"Remove '%1'?":"'%1' entfernen?",
 "Start":"",
-"URL":""
+"Term is required":"",
+"Term must be more than 1 character":"",
+"URL":"",
+"URL is required":""
 }
