@@ -145,6 +145,7 @@
 "My Music":"",
 "NOTE: 'Application layout' is not saved, as this is a per-device setting.":"",
 "Name":"",
+"Name is required":"",
 "Never":"",
 "New Music":"",
 "No Player":"",
@@ -266,6 +267,8 @@
 "Synchronise":"",
 "Synchronise players":"",
 "Term":"",
+"Term is required":"",
+"Term must be more than 1 character":"",
 "The following plugins have updates available:":"",
 "Thurs":"",
 "Thursday":"",
@@ -282,6 +285,7 @@
 "Tuesday":"",
 "Type: %1":"",
 "URL":"",
+"URL is required":"",
 "Un-pin":"",
 "Un-pin '%1'?":"",
 "Un-pin from main page":"",
