@@ -206,6 +206,7 @@
 "Music Folder":"",
 "Mute":"",
 "NOTE: 'Application layout' is not saved, as this is a per-device setting.":"",
+"Name is required":"",
 "Never":"",
 "No artist found":"",
 "No repeat":"",
@@ -289,6 +290,8 @@
 "Sync":"",
 "Synchronise players":"",
 "Term":"",
+"Term is required":"",
+"Term must be more than 1 character":"",
 "The following plugins have updates available:":"",
 "Toggle view":"",
 "Total albums: %1":"",
@@ -299,6 +302,7 @@
 "Tracks":"",
 "Type: %1":"",
 "URL":"",
+"URL is required":"",
 "Un-pin":"",
 "Un-pin '%1'?":"",
 "Un-pin from main page":"",
