@@ -19,6 +19,7 @@
 14. Fix divider in group players context menu in 'Manage players' dialog.
 15. Fix updating player list in 'Manager players' dialog - e.g. when a player
     is added or removed.
+16. Add form validation to some dialogs.
 
 0.7.4
 -----
